@@ -24,6 +24,8 @@ Version 1.4.2+svn:
    * Fixed a mememory leak in networking code
    * fixed an alignement issue which caused a SIGBUS on a Sparc 
      (debian bug #426318)
+   * Fixed tokenizer not to strip CR from quoted string becaue it would destroy
+     images transfered over network
    * added some includes to fix compilation problems with Sun Studio 12 
      (patch #1066)
    * fixed null-pointer reference in network code
